--- a/game/public/game.html
+++ b/game/public/game.html
@@ -41,34 +41,61 @@ socket.on('newMessage', function(message){
             break;
         case 2:
             document.getElementById("paragraph").innerHTML += message.value + "<br/>";
+            if (message.value=="Congratulations, you won!") {
+                alert("Game ends");
+            }
             break;
         case 3:
             document.getElementById("paragraph").innerHTML += message.value.message + "<br/>";
             var b = new Boolean();
-            Game.nextBoolean(b, socket, message.value.continue);
+            Game.nextBoolean(b, socket, message.value.continue, message.value.num);
             break;
         case 4:
-            document.getElementById("paragraph").innerHTML += message.value.message + "<br/>";
-            var n = new Number();
-            var callback = Game.send;
-            var f;
-            var args;
-            switch(message.value.continue) {
-                case "send":
-                    f = "rollAtBeginning";
-                    args = null;
-                    break;
-                case "addIndex":
-                    f = "addIndex";
-                    args = message.value.args;
-                    break;
-                case "show":
-                    f = "show";
-                    args = null;
-                    break;
-            }
-            Game.nextInteger(n, message.value.bigger, message.value.smaller, message.value.alert, callback, { socket: socket, value: n, function: f, args: args });
-            break;
+        document.getElementById("paragraph").innerHTML += message.value.message + "<br/>";
+                var n = new Number();
+                var callback = Game.send;
+                var f;
+                var args;
+                var smaller;
+                var bigger;
+                if (message.value.smaller=="neg") {
+                    smaller = Number.NEGATIVE_INFINITY;
+                } else if (message.value.smaller=="pos") {
+                    smaller = Number.POSITIVE_INFINITY;
+                } else {
+                    smaller = message.value.smaller;
+                }
+                if (message.value.bigger=="neg") {
+                    bigger = Number.NEGATIVE_INFINITY;
+                } else if (message.value.bigger=="pos") {
+                    bigger = Number.POSITIVE_INFINITY;
+                } else {
+                    bigger = message.value.bigger;
+                }
+                switch(message.value.continue) {
+                    case "send":
+                        f = "rollAtBeginning";
+                        args = null;
+                        break;
+                    case "addIndex":
+                        f = "addIndex";
+                        args = message.value.args;
+                        break;
+                    case "show":
+                        f = "show";
+                        args = null;
+                        break;
+                    case "raise1":
+                        f = "raise1";
+                        args = null;
+                        break;
+                    case "raise2":
+                        f = "raise2";
+                        args = message.value.args;
+                        break;
+                }
+                Game.nextInteger(n, bigger, smaller, message.value.alert, callback, { socket: socket, value: n, function: f, args: args });
+                break;
         case 5:
             socket.emit('createMessage', {
                 code: "update",
