--- a/game/public/game.html
+++ b/game/public/game.html
@@ -1,9 +1,10 @@
+<!DOCTYPE html>
 <html>
 <body>
 
 <title id="player"></title>
 
-<a href="https://github.com/Ninush2498/project/blob/master/README.md">Pravidla</a>
+<a href="http://localhost:3000/pravidla">Pravidla</a>
 
 <p id="paragraph">Wait please.</p>
 
@@ -15,6 +16,53 @@
 var socket=io();
 var num;
 var player;
+
+function printState(str) {
+    var state = str.visible;
+    var s = "{numOfPlayers: " + state.numOfPlayers + ", ";
+    s += "numOfDices: " + state.numOfDices + ", ";
+    s += "numOfVisibleDices: " + state.numOfVisibleDices + ", ";
+    s += "guess: {count: " + state.guess.count + ", value: " + state.guess.value + "}, ";
+    s += "players: [";
+    for (var i=0; i<state.players.length-1; i++) {
+        s += "{active: " + state.players[i].active;
+        if (state.players[i].active) {
+            s += "visibleDices: [";
+            for (var j=0; j<state.players[i].visibleDices.length-1; j++) {
+                if (state.players[i].visibleDices[j]!=0) {
+                    s += state.players[i].visibleDices[j] + " ";
+                }
+            }
+            if (state.players[i].visibleDices[state.players[i].visibleDices.length-1]!=0) {
+                s += state.players[i].visibleDices[j] + " ";
+            }
+            s += "]";
+        }
+        s += "}, ";
+    }
+    s += "{active: " + state.players[state.players.length-1].active;
+    if (state.players[state.players.length-1].active) {
+        s += ", visibleDices: [";
+        for (var j=0; j<state.players[state.players.length-1].visibleDices.length-1; j++) {
+            if (state.players[state.players.length-1].visibleDices[j]!=0) {
+                s += state.players[state.players.length-1].visibleDices[j] + " ";
+            }
+        }
+        if (state.players[state.players.length-1].visibleDices[state.players[state.players.length-1].visibleDices.length-1]!=0) {
+            s += state.players[state.players.length-1].visibleDices[state.players[state.players.length-1].visibleDices.length-1] + " ";
+        }
+        s += "]";
+    }
+    s += "}";
+    s += "]";
+    s += ", dices: [";
+    for (var i=0; i<str.dices.length-1; i++) {
+        s += str.dices[i] + " ";
+    }
+    s += str.dices[str.dices.length-1] + "]";
+    s += "}";
+    return s;
+}
 
 
 socket.on('connect', function(){
@@ -105,8 +153,7 @@ socket.on('newMessage', function(message){
             });
             break;
         case 6:
-            //document.getElementById("paragraph").innerHTML += message.value + "<br/>";
-            //v buducnosti vypisovanie stavu
+            document.getElementById("paragraph").innerHTML += printState(message.value) + "<br/>";
             break;
     }
 });
