--- a/game/public/game.html
+++ b/game/public/game.html
@@ -4,167 +4,193 @@
 
 <title id="player"></title>
 
-<a href="http://localhost:3000/pravidla">Pravidla</a>
+<button onclick="pravidla()">How to play</button>
 
 <p id="paragraph">Wait please.</p>
 
 <script src="public/Game.js"></script>
 
-<script src="/socket.io/socket.io.js"></script> 
+<script src="/socket.io/socket.io.js"></script>
+
 <script>
 
-var socket=io();
-var num;
-var player;
+    var host;
+    var port;
 
-function printState(str) {
-    var state = str.visible;
-    var s = "{numOfPlayers: " + state.numOfPlayers + ", ";
-    s += "numOfDices: " + state.numOfDices + ", ";
-    s += "numOfVisibleDices: " + state.numOfVisibleDices + ", ";
-    s += "guess: {count: " + state.guess.count + ", value: " + state.guess.value + "}, ";
-    s += "players: [";
-    for (var i=0; i<state.players.length-1; i++) {
-        s += "{active: " + state.players[i].active;
-        if (state.players[i].active) {
-            s += "visibleDices: [";
-            for (var j=0; j<state.players[i].visibleDices.length-1; j++) {
-                if (state.players[i].visibleDices[j]!=0) {
+    function pravidla() {
+        if (typeof host === "undefined") {
+            setTimeout(pravidla, 100);
+        }
+        if (host == "localhost") {
+            window.open(`http://${host + ":" + port}/pravidla`);
+        } else {
+            window.open(`${host}/pravidla`);
+        }
+    }
+
+    //if (typeof sessionStorage.getItem("connected") === "undefined") {location.replace();}
+
+    var socket=io();
+    var player;
+
+    socket.emit('createMessage', {
+        code: "join",
+        value: null //neskor info o hracovi
+    });
+
+    function printState(str) {
+        var state = str.visible;
+        var s = "{numOfPlayers: " + state.numOfPlayers + ", ";
+        s += "numOfDices: " + state.numOfDices + ", ";
+        s += "numOfVisibleDices: " + state.numOfVisibleDices + ", ";
+        s += "guess: {count: " + state.guess.count + ", value: " + state.guess.value + "}, ";
+        s += "players: [";
+        for (var i=0; i<state.players.length-1; i++) {
+            s += "{active: " + state.players[i].active;
+            if (state.players[i].active) {
+                s += "visibleDices: [";
+                for (var j=0; j<state.players[i].visibleDices.length-1; j++) {
+                    if (state.players[i].visibleDices[j]!=0) {
+                        s += state.players[i].visibleDices[j] + " ";
+                    }
+                }
+                if (state.players[i].visibleDices[state.players[i].visibleDices.length-1]!=0) {
                     s += state.players[i].visibleDices[j] + " ";
                 }
+                s += "]";
             }
-            if (state.players[i].visibleDices[state.players[i].visibleDices.length-1]!=0) {
-                s += state.players[i].visibleDices[j] + " ";
+            s += "}, ";
+        }
+        s += "{active: " + state.players[state.players.length-1].active;
+        if (state.players[state.players.length-1].active) {
+            s += ", visibleDices: [";
+            for (var j=0; j<state.players[state.players.length-1].visibleDices.length-1; j++) {
+                if (state.players[state.players.length-1].visibleDices[j]!=0) {
+                    s += state.players[state.players.length-1].visibleDices[j] + " ";
+                }
+            }
+            if (state.players[state.players.length-1].visibleDices[state.players[state.players.length-1].visibleDices.length-1]!=0) {
+                s += state.players[state.players.length-1].visibleDices[state.players[state.players.length-1].visibleDices.length-1] + " ";
             }
             s += "]";
         }
-        s += "}, ";
-    }
-    s += "{active: " + state.players[state.players.length-1].active;
-    if (state.players[state.players.length-1].active) {
-        s += ", visibleDices: [";
-        for (var j=0; j<state.players[state.players.length-1].visibleDices.length-1; j++) {
-            if (state.players[state.players.length-1].visibleDices[j]!=0) {
-                s += state.players[state.players.length-1].visibleDices[j] + " ";
-            }
-        }
-        if (state.players[state.players.length-1].visibleDices[state.players[state.players.length-1].visibleDices.length-1]!=0) {
-            s += state.players[state.players.length-1].visibleDices[state.players[state.players.length-1].visibleDices.length-1] + " ";
-        }
+        s += "}";
         s += "]";
+        s += ", dices: [";
+        for (var i=0; i<str.dices.length-1; i++) {
+            s += str.dices[i] + " ";
+        }
+        s += str.dices[str.dices.length-1] + "]";
+        s += "}";
+        return s;
     }
-    s += "}";
-    s += "]";
-    s += ", dices: [";
-    for (var i=0; i<str.dices.length-1; i++) {
-        s += str.dices[i] + " ";
-    }
-    s += str.dices[str.dices.length-1] + "]";
-    s += "}";
-    return s;
-}
 
 
-socket.on('connect', function(){
-    console.log('Connected to Server');  
-}); 
+    socket.on('connect', function(){
+        console.log('Connected to Server');  
+    }); 
 
 
-socket.on('newMessage', function(message){
-    console.log(message);
-    switch(message.code) {
-        case 0:
-            document.getElementById("player").innerHTML = "Player " + message.value;
-            num = message.value;
-            break;
-        case 1:
-            if (message.value.status=="OK") {
-                document.getElementById("paragraph").innerHTML = "";
-                player = message.value.player;
-                socket.emit('createMessage', {
-                        code: "player",
-                        value: { number: num, socket: socket.id }
-                    });
-            } else {
-                document.getElementById("paragraph").innerHTML = "Sorry, you can't play.";
-            }
-            break;
-        case 2:
-            document.getElementById("paragraph").innerHTML += message.value + "<br/>";
-            if (message.value=="Congratulations, you won!") {
-                alert("Game ends");
-            }
-            break;
-        case 3:
-            document.getElementById("paragraph").innerHTML += message.value.message + "<br/>";
-            var b = new Boolean();
-            Game.nextBoolean(b, socket, message.value.continue, message.value.num);
-            break;
-        case 4:
-        document.getElementById("paragraph").innerHTML += message.value.message + "<br/>";
-                var n = new Number();
-                var callback = Game.send;
-                var f;
-                var args;
-                var smaller;
-                var bigger;
-                if (message.value.smaller=="neg") {
-                    smaller = Number.NEGATIVE_INFINITY;
-                } else if (message.value.smaller=="pos") {
-                    smaller = Number.POSITIVE_INFINITY;
-                } else {
-                    smaller = message.value.smaller;
-                }
-                if (message.value.bigger=="neg") {
-                    bigger = Number.NEGATIVE_INFINITY;
-                } else if (message.value.bigger=="pos") {
-                    bigger = Number.POSITIVE_INFINITY;
-                } else {
-                    bigger = message.value.bigger;
-                }
-                switch(message.value.continue) {
-                    case "send":
-                        f = "rollAtBeginning";
-                        args = null;
-                        break;
-                    case "addIndex":
-                        f = "addIndex";
-                        args = message.value.args;
-                        break;
-                    case "show":
-                        f = "show";
-                        args = null;
-                        break;
-                    case "raise1":
-                        f = "raise1";
-                        args = null;
-                        break;
-                    case "raise2":
-                        f = "raise2";
-                        args = message.value.args;
-                        break;
-                }
-                Game.nextInteger(n, bigger, smaller, message.value.alert, callback, { socket: socket, value: n, function: f, args: args });
+    socket.on('newMessage', function(message){
+        console.log(message);
+        switch(message.code) {
+            case 0:
+                host = message.value.HOST;
+                port = message.value.PORT;
                 break;
-        case 5:
-            socket.emit('createMessage', {
-                code: "update",
-                value: message.value
-            });
-            break;
-        case 6:
-            document.getElementById("paragraph").innerHTML += printState(message.value) + "<br/>";
-            break;
-    }
-});
+            case 1:
+                if (message.value.status=="OK") {
+                    sessionStorage.setItem("gameID", message.value.gameID);
+                    sessionStorage.setItem("playerID", message.value.index);
+                    document.getElementById("player").innerHTML = "Player " + (message.value.index+1);
+                    document.getElementById("paragraph").innerHTML = "";
+                    player = message.value.player;
+                } else {
+                    alert("Sorry, there is no active game. Please start a new one.");
+                    if (host == "localhost") {
+                        location.replace(`http://${host + ":" + port}/newGame`);
+                    } else {
+                        location.replace(`${host}/newGame`);
+                    }
+                }
+                break;
+            case 2:
+                document.getElementById("paragraph").innerHTML += message.value + "<br/>";
+                if (message.value=="Congratulations, you won!") {
+                    alert("Game ends");
+                }
+                break;
+            case 3:
+                document.getElementById("paragraph").innerHTML += message.value.message + "<br/>";
+                var b = new Boolean();
+                Game.nextBoolean(b, socket, message.value.continue, message.value.num, sessionStorage.getItem("gameID"));
+                break;
+            case 4:
+            document.getElementById("paragraph").innerHTML += message.value.message + "<br/>";
+                    var n = new Number();
+                    var callback = Game.send;
+                    var f;
+                    var args;
+                    var smaller;
+                    var bigger;
+                    if (message.value.smaller=="neg") {
+                        smaller = Number.NEGATIVE_INFINITY;
+                    } else if (message.value.smaller=="pos") {
+                        smaller = Number.POSITIVE_INFINITY;
+                    } else {
+                        smaller = message.value.smaller;
+                    }
+                    if (message.value.bigger=="neg") {
+                        bigger = Number.NEGATIVE_INFINITY;
+                    } else if (message.value.bigger=="pos") {
+                        bigger = Number.POSITIVE_INFINITY;
+                    } else {
+                        bigger = message.value.bigger;
+                    }
+                    switch(message.value.continue) {
+                        case "send":
+                            f = "rollAtBeginning";
+                            args = null;
+                            break;
+                        case "addIndex":
+                            f = "addIndex";
+                            args = message.value.args;
+                            break;
+                        case "show":
+                            f = "show";
+                            args = null;
+                            break;
+                        case "raise1":
+                            f = "raise1";
+                            args = null;
+                            break;
+                        case "raise2":
+                            f = "raise2";
+                            args = message.value.args;
+                            break;
+                    }
+                    Game.nextInteger(n, bigger, smaller, message.value.alert, callback, { socket: socket, value: n, function: f, args: args, gameID: sessionStorage.getItem("gameID") });
+                    break;
+            case 5:
+                socket.emit('createMessage', {
+                    code: "update",
+                    value: { value: message.value, gameID: sessionStorage.getItem("gameID") }
+                });
+                break;
+            case 6:
+                document.getElementById("paragraph").innerHTML += printState(message.value) + "<br/>";
+                break;
+        }
+    });
 
 
-socket.on('disconnect', function(){
-    console.log('Disconnected from server');
-});
+    socket.on('disconnect', function(){
+        console.log('Disconnected from server');
+        sessionStorage.clear();
+    });
 </script> 
 
 
 
 </body>
-</html> 
+</html>
